fix: make gap between text and border constant

--- a/frontend/src/components/typing-container/TextArea.css
+++ b/frontend/src/components/typing-container/TextArea.css
@@ -1,6 +1,6 @@
 #text-area {
-  margin: 0px;
-  padding: 15px;
+  margin: 15px;
+  padding: 0px;
   font-size: 1.4rem;
   overflow: auto;
 }
